--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,6 @@
     <string name="pass">..............</string>
     <string name="logar">LOGAR</string>
     <string name="email">Email</string>
-    <string name="senha">Senha</string>
     <string name="ainda_n_o_possui_cadastro_clique_aqui">AINDA NÃO POSSUI CADASTRO? CLIQUE AQUI</string>
     <string name="entrar">ENTRAR</string>
     <string name="title_activity_main2">MainActivity2</string>
@@ -37,4 +36,7 @@
     <string name="menu_icon">menu_icon</string>
     <string name="profi">profi</string>
     <string name="confirme_sua_segunda_dose">Confirme sua segunda dose:</string>
+    <string name="cadastro">Cadastro</string>
+    <string name="cadastrar">CADASTRAR</string>
+    <string name="senha">Senha</string>
 </resources>
