--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,26 @@
     <string name="cadastro">Cadastro</string>
     <string name="cadastrar">CADASTRAR</string>
     <string name="senha">Senha</string>
+    <string name="tela_de_login">TELA DE LOGIN</string>
+    <string name="tela_de_cadastro">TELA DE CADASTRO</string>
+    <string name="textview">TextView</string>
+    <string name="menu_i">menu_i</string>
+    <string name="nomed">Nome:</string>
+    <string name="emaild">Email:</string>
+    <string name="idade">Idade: </string>
+    <string name="idaded">Idade:</string>
+    <string name="delete_icon">delete_icon</string>
+    <string name="edit_icon">edit_icon</string>
+    <string name="suas_informa_es_de_perfil">Suas informações de perfil:</string>
+    <string name="suas_informa_es_de_vacina_o">Suas informações de vacinação:</string>
+    <string name="ubs">UBS:</string>
+    <string name="marcad">Marca:</string>
+    <string name="dosed">Dose:</string>
+    <string name="datad">Data:</string>
+    <string name="voltar_icon">voltar_icon</string>
+    <string name="nome">Nome</string>
+    <string name="nome_da_ubs">Nome da UBS</string>
+    <string name="marca">Marca</string>
+    <string name="dose_tomada">Dose tomada</string>
+    <string name="data">Data</string>
 </resources>
