--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="marca">Marca</string>
     <string name="dose_tomada">Dose tomada</string>
     <string name="data">Data</string>
+    <string name="image">image</string>
 </resources>
